--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -62,6 +62,7 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref DovetailAnalyticsLambdaCodeS3ObjectKey
         VpcId: !Ref VpcId
@@ -175,6 +176,7 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref ProxyLambdaCodeS3ObjectKey
         CorporateHostname: !Ref CorporateHostname
