--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -80,7 +80,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Castle] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Castle] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Castle's Elixer server is returning 5XX errors from
         the ECS service to the load balancer.
@@ -308,7 +308,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub WARN [Castle] Redis <${EnvironmentTypeAbbreviation}> HIGH MEMORY USAGE
+      AlarmName: !Sub WARN [Castle] Redis <${EnvironmentTypeAbbreviation}> HIGH MEMORY USAGE (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Castle Redis's database memory usage has exceeded
         the recommended safe level
@@ -323,11 +323,27 @@ Resources:
       Statistic: Maximum
       Threshold: 0.85
       TreatMissingData: notBreaching
+  RedisMemoryLowAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt RedisMemoryLowAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref TaskLogGroup }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Castle }
   RedisMemoryVeryLowAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Castle] Redis <${EnvironmentTypeAbbreviation}> VERY HIGH MEMORY USAGE
+      AlarmName: !Sub ERROR [Castle] Redis <${EnvironmentTypeAbbreviation}> VERY HIGH MEMORY USAGE (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Castle Redis's database memory usage has reached a
         critically high level
@@ -342,6 +358,22 @@ Resources:
       Statistic: Maximum
       Threshold: 0.93
       TreatMissingData: notBreaching
+  RedisMemoryVeryLowAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt RedisMemoryVeryLowAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref TaskLogGroup }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Castle }
 
 Outputs:
   RedisCacheName:
