--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -89,7 +89,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [CMS] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [CMS] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} CMS's Rails server is returning 5XX errors from
         the ECS service to the load balancer.
@@ -426,7 +426,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [CMS] Audio dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [CMS] Audio dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} CMS's dead-letter queue for the audio callback
         queue is not empty, which means some job callbacks were not
@@ -495,7 +495,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [CMS] Image dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [CMS] Image dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} CMS's dead-letter queue for the image callback
         queue is not empty, which means some job callbacks were not
@@ -564,7 +564,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [CMS] Import dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [CMS] Import dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} CMS's dead-letter queue for the podcast import
         callback queue is not empty, which means some imports were not
@@ -633,7 +633,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [CMS] Search index dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [CMS] Search index dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} CMS's dead-letter queue for the search index
         queue is not empty, which means some indexing jobs were not successful.
@@ -701,7 +701,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [CMS] Default dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [CMS] Default dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} CMS's dead-letter queue for the default
         queue is not empty, which means some jobs were not successful.
