--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -396,7 +396,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder's dedicated application load balancer (ALB)
         is returning 5XX errors to clients. The errors may or may not be
@@ -432,7 +432,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RESPONDING SLOWLY
+      AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RESPONDING SLOWLY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder's dedicated application load balancer (ALB)
         is seeing very slow response times for a significant percent of the
@@ -532,7 +532,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Feeder] Default dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [Feeder] Default dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder's dead-letter queue for the default callback
         queue is not empty, which means some job callbacks were not
@@ -607,7 +607,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Feeder] Fixer dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY
+      AlarmName: !Sub ERROR [Feeder] Fixer dead-letter queue <${EnvironmentTypeAbbreviation}> NOT EMPTY (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder's dead-letter queue for the Fixer callback
         queue is not empty, which means some Fixer or Porter job callbacks were
@@ -758,7 +758,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Feeder] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Feeder] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder's Rails server is returning 5XX errors from
         the ECS service to the load balancer.
