--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -142,7 +142,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Play] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Play] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Play's Express server is returning 5XX errors from
         the ECS service to the load balancer.
@@ -277,7 +277,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> SUSTAINED 5XX ERRORS
+      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> SUSTAINED 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Play's feed proxy server is returning 5XX errors
         from the ECS service to the load balancer.
@@ -315,7 +315,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> 5XX ERRORS SPIKE
+      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> 5XX ERRORS SPIKE (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Play's feed proxy server is returning 5XX errors
         from the ECS service to the load balancer.
