--- a/stacks/apps/publish.yml
+++ b/stacks/apps/publish.yml
@@ -84,7 +84,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Publish] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Publish] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Publish's Express server is returning 5XX errors
         from the ECS service to the load balancer.
