--- a/stacks/apps/styleguide.yml
+++ b/stacks/apps/styleguide.yml
@@ -72,7 +72,7 @@ Resources:
   TargetGroupHttp5xxAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub INFO [Styleguide] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub INFO [Styleguide] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Styleguide's Storybook server is returning 5XX
         errors from the ECS service to the load balancer.
