--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -95,7 +95,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Augury] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Augury] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Augury's Rails server is returning 5XX errors from
         the ECS service to the load balancer.
@@ -392,7 +392,7 @@ Resources:
   AuguryActualsAreBehindAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Augury] Worker <${EnvironmentTypeAbbreviation}> NOT FETCHING IMPRESSIONS
+      AlarmName: !Sub ERROR [Augury] Worker <${EnvironmentTypeAbbreviation}> NOT FETCHING IMPRESSIONS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Augury's worker task has not logged any impression
         fetching actvitiy for an unusually long time. This could mean incorrect
