--- a/stacks/apps/metrics.yml
+++ b/stacks/apps/metrics.yml
@@ -76,7 +76,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Metrics] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Metrics] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Metrics's Express server is returning 5XX errors
         from the ECS service to the load balancer.
